manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: green
  name: green
spec:
  containers:
  - image: ashokjjk/colors:green
    name: green
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        memory: 250Mi
        cpu: 0.5
      limits:
        memory: 500Mi
        cpu: 1
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: green
  name: green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: green
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: orange
  name: orange
spec:
  containers:
  - image: ashokjjk/colors:orange
    name: orange
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: orange
  name: orange
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: orange
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: red
  name: red
spec:
  containers:
  - image: ashokjjk/colors:red
    name: orange
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: red
  name: red
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: red
  type: ClusterIP
---

# kubernetes version 1.17 and below
## Nginx ingress resource for k8s ver 1.7 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /green(/|$)(.*)      
        backend:
          serviceName: green
          servicePort: 80
      - path: /orange(/|$)(.*)        
        backend:
          serviceName: orange
          servicePort: 80
      - path: /red(/|$)(.*)
        backend:
          serviceName: red
          servicePort: 80
---
## kuberenets version 1.8 and above
## Nginx ingress resource
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /green(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: green
#             port:
#               number: 80
#       - path: /orange(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: orange
#             port:
#               number: 80
#       - path: /red(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: red
#             port:
#               number: 80
---
## Traefik ingress resource
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: traefik-ingress
#   annotations:   
#     kubernetes.io/ingress.class: traefik
#     traefik.frontend.rule.type: "PathPrefixStrip"
#     traefik.ingress.kubernetes.io/rewrite-target: "/"
#     # traefik.ingress.kubernetes.io/app-root: "/"
#     traefik.ingress.kubernetes.io/frontend-entry-points: http,https
# spec:
#   rules:
#   - host: "ashok.com"
#     http:
#       paths:
#       - path: /green
#         pathType: Prefix
#         backend:
#           service:
#             name: green
#             port:
#               number: 80
#       - path: /orange
#         pathType: Prefix
#         backend:
#           service:
#             name: orange
#             port:
#               number: 80
#       - path: /red
#         pathType: Prefix
#         backend:
#           service:
#             name: red
#             port:
#               number: 80
